# maomao

./: .gitignore  REAMDE.md  audio.py  embed.py  main.py  maomao.py  media.py  meta.py  pyproject.toml
cogs/: exceptions.py  music.py
env/: __init__.py
ui/: player.py  search.py
