[tool.poetry]
name = "maomao"
version = "0.1.0"
description = "Discord music bot"
authors = ["Ausweghen <auswghen.dev@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
secretbox = "^2.8.0"
rich = "^13.7.0"
disnake = "^2.9.1"
mafic = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
